PROJECT (prac)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

SET (CMAKE_BUILD_TYPE "debug")
ADD_EXECUTABLE (prac func_ptr.cpp)
ADD_EXECUTABLE (server_echo server.cpp)
ADD_EXECUTABLE (client_echo client.cpp)
ADD_EXECUTABLE (timer timer_asio.cpp)
ADD_EXECUTABLE (cptr cptr.cpp)
ADD_EXECUTABLE (atomic atomic.cpp)

TARGET_LINK_LIBRARIES (timer boost_timer boost_chrono boost_thread boost_system)
TARGET_LINK_LIBRARIES (atomic pthread)
TARGET_LINK_LIBRARIES (server_echo boost_timer boost_chrono boost_thread boost_system)
TARGET_LINK_LIBRARIES (client_echo pthread boost_chrono boost_thread boost_system)
